rtg_tests/negative/assignment_count/go.mod
module example.com/rtgtests/negative/assignment_count

go 1.25
